--- a/about.html
+++ b/about.html
@@ -65,17 +65,17 @@
         <div class="container py-5">
             <div class="row">
                 <h1 class="text-center mb-md-5 mb-3">За нас</h1>
-                <div class="col-md-6 col-12 pe-md-5 pe-5">
+                <div class="col-md-6 col-12 pe-md-5 pe-3">
                     <h2 class="mb-md-5 mb-3 text-center text-md-start">
                         <strong>Суши Доставка</strong> – вашето място за вкусно и свежо суши, доставено директно до
                         вратата ви!
                     </h2>
-                    <p>
+                    <p class="text-center text-md-start">
                         Ние вярваме, че сушито е не само храна, но и изкуство. С повече от 10 години опит, нашите
                         майстор-готвачи създават изискани суши сетове, които съчетават традиционната японска кухня с
                         модерни вкусове.
                     </p>
-                    <p>
+                    <p class="text-center text-md-start">
                         Използваме само най-пресните съставки, подбрани от доверени доставчици, за да гарантираме
                         качество и вкус, които ще ви очароват. Всеки сет е внимателно приготвен с грижа и внимание към
                         детайлите, защото за нас вашето удоволствие е на първо място.
