--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-6 col-12 d-flex align-items-center flex-column mt-md-0 mt-3 ps-md-5">
+                <div class="col-md-6 col-12 d-flex flex-column mt-md-0 mt-3 ps-md-5">
                     <h2>Къде се намираме?</h2>
                     <div class="d-flex justify-content-center gap-3 w-100">
                         <div class="w-100">
