--- a/basket.html
+++ b/basket.html
@@ -21,7 +21,8 @@
             }
 
             .btn-light:hover {
-                background-color: #fff3e6;
+                background-color: rgb(213, 143, 14);
+                color: white;
             }
 
             .update-btn {
