--- a/menu.html
+++ b/menu.html
@@ -9,8 +9,14 @@
         <link href="./global.css" rel="stylesheet" />
         <style>
             .card {
-                box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 10px 10px;
-                background-color: #a6a6a6;
+                box-shadow: rgba(100, 100, 111, 0.2) 0px 4px 10px 6px;
+                background: rgb(255, 248, 234);
+                background: linear-gradient(
+                    158deg,
+                    rgba(255, 248, 234, 1) 0%,
+                    rgba(241, 216, 166, 0.6671918767507004) 56%,
+                    rgba(227, 227, 227, 1) 100%
+                );
                 transition: transform 0.3s ease-in-out;
             }
 
@@ -97,13 +103,12 @@
                             Цени възходящо <i class="bi bi-arrow-down"></i>
                         </a>
                     </li>
- 
                 </ul>
             </div>
 
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/barok.png" class="card-img-top bg-light" alt="Суши сет 1" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-"
@@ -117,21 +122,21 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/kombo.jpg" class="card-img-top bg-light" alt="Суши сет 2" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-"
                         >
                             <div class="">
-                                <h5 class="card-title text-white">Снежно комбо</h5>
-                                <p class="card-text text-white">24 броя - 30.99 лв.</p>
+                                <h5 class="card-title">Снежно комбо</h5>
+                                <p class="card-text">24 броя - 30.99 лв.</p>
                             </div>
                             <button class="btn btn-warning">Добави</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/kombo2.png" class="card-img-top bg-light" alt="Суши сет 3" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-"
@@ -145,7 +150,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/kombo3.png" class="card-img-top bg-light" alt="Суши сет 3" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-"
@@ -159,7 +164,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/kombo3.jpg" class="card-img-top bg-light" alt="Суши сет 3" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-"
@@ -173,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/kombo4.png" class="card-img-top bg-light" alt="Суши сет 3" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-"
@@ -187,7 +192,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/sushi3.png" class="card-img-top bg-light" alt="Суши сет 3" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-"
@@ -201,7 +206,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/sushi1.png" class="card-img-top bg-light" alt="Суши сет 3" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-0"
@@ -215,7 +220,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <div class="card bg-dark text-white">
+                    <div class="card">
                         <img src="./img/sushi2.png" class="card-img-top bg-light" alt="Суши сет 3" />
                         <div
                             class="card-body d-flex flex-md-column flex-lg-row flex-row align-items-center justify-content-between gap-md-2 gap-0"
