--- a/order.html
+++ b/order.html
@@ -8,46 +8,14 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
         <link href="./global.css" rel="stylesheet" />
         <style>
-            .cart-container {
-                background-color: #fff;
-                border: 1px solid #e6e6e6;
-                padding: 20px;
-                border-radius: 8px;
-            }
-
             .btn-light {
                 border: 1px solid rgb(213, 143, 14);
                 color: rgb(213, 143, 14);
             }
 
             .btn-light:hover {
-                background-color: #fff3e6;
-            }
-
-            .update-btn {
-                background-color: #eeb35b;
-                color: #fff;
-            }
-
-            .summary-title {
-                font-weight: bold;
-                color: #333;
-            }
-
-            .total-price {
-                font-size: 1.2rem;
-                font-weight: bold;
-                color: #000;
-            }
-
-            .discount-input {
-                border: 1px solid #ccc;
-                border-radius: 5px;
-            }
-
-            .price-detail {
-                color: #555;
-                font-weight: bold;
+                background-color: rgb(213, 143, 14);
+                color: white;
             }
         </style>
     </head>
