--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="index.html">Начало</a>
+                            <a class="nav-link" href="index.html">Начало</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="menu.html">Меню</a>
