--- a/basket.html
+++ b/basket.html
@@ -8,6 +8,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
         <link href="./global.css" rel="stylesheet" />
         <style>
+            body {
+                display: flex;
+                flex-direction: column;
+            }
+            .container {
+                flex: 1;
+            }
             .cart-container {
                 background-color: #fff;
                 border: 1px solid #e6e6e6;
@@ -111,9 +118,7 @@
             </div>
             <div class="row">
                 <div class="col-md-8 cart-container d-flex flex-column">
-                    <h5 class="mb-4 alert alert-success">
-                        ✔ „Снежно комбо“ е добавен във вашата количка.
-                    </h5>
+                    <h5 class="mb-4 alert alert-success">✔ „Снежно комбо“ е добавен във вашата количка.</h5>
                     <div>
                         <div class="row align-items-center mb-3">
                             <div class="col-3">
@@ -200,7 +205,6 @@
                 </div>
             </div>
         </footer>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
